test/class/valid/addTwoMembers.wacc
begin
  class Dog is
    int z;
    int y;

    init (int param1, int param2) is
      self.z = param1
      #self.y = param2
    end

    int f(string x) is
       string z = x;
       return 1
    end    
    
    int f1(string x) is
       return 1
     end

  end
  skip
#  Dog d = new Dog(1, 2);
#  d.x = d.x + d.y 
end
