test/class/invalid/methodDoesNotReturnObject.wacc
begin
 class Dog is
   int x;
   

   init (int x) is
     self.x = x;
   end
  
   int f() is
     return 1
   end
  
 end
 
 class Cat is
   int y;
   
   init(int y) is
     self.y = y
   end
 end

 Dog d = new Dog(1);
 d.f().y = 1

end


